# machine-learning-from-scratch

./: Makefile  main.py
ml_algorithms/: KNN.py  LinearRegression.py  LossFunctions.py  Matrix.py  Vector.py  __init__.py  pyproject.toml
ml_algorithms/ml_algorithms/: KNN.py  LinearRegression.py  LossFunctions.py  Matrix.py  Vector.py  __init__.py  __main__.py
ml_algorithms/ml_algorithms/utils/: Distance.py  PerformanceMetrics.py
ml_algorithms/utils/: Distance.py  PerformanceMetrics.py  __init__.py
